--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@prisma/client": "^6.2.1",
     "@vercel/postgres": "^0.10.0",
     "bcrypt": "^5.1.1",
     "next": "15.1.3",
