--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@prisma/client": "^6.2.1",
     "@vercel/postgres": "^0.10.0",
     "bcrypt": "^5.1.1",
-    "next": "15.1.3",
+    "next": "^15.1.6",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "swr": "^2.3.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
