--- a/package.json
+++ b/package.json
@@ -12,17 +12,24 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.2.1",
+    "@remixicon/react": "^4.6.0",
     "@vercel/postgres": "^0.10.0",
     "bcrypt": "^5.1.1",
+    "clsx": "^2.1.1",
+    "geist": "^1.3.1",
     "next": "^15.1.6",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.1",
     "swr": "^2.3.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwind-variants": "^0.3.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/forms": "^0.5.10",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^19",
