--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "geist": "^1.3.1",
     "next": "^15.1.6",
     "next-auth": "^5.0.0-beta.25",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.1",
